# OpenAI-Guardian

./: .gitignore  README.md  chat.py  chat2.py  config.example.yml  docker-compose.yml  nginx.conf  nginx.without_SSL.conf  prob.py
Granite-Guardian/: Dockerfile  pyproject.toml  requirements.txt
Granite-Guardian/app/: main.py
Granite-Guardian/guardian/: __init__.py
OpenAI-Guardian/: Dockerfile  pyproject.toml  requirements.txt
OpenAI-Guardian/app/: main.py
mitmproxy/: Dockerfile  intercept_openai.py
mitmproxy/code/: intercept_openai.py
