[tool.poetry]
name = "granite-guardian"
version = "0.1.0"
description = ""
authors = ["shawn1251 <shawn1251@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
transformers = "^4.48.1"
torch = "^2.5.1"
accelerate = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
