[tool.poetry]
name = "openai-guardian"
version = "0.1.0"
description = ""
authors = ["shawn1251 <shawn1251@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
